methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:27: error: not found: value faireMotif
    faireMotif()
    ^MethodsPictureLarge:34: error: not found: value faireMotif
      faireMotif()}
      ^MethodsPictureLarge:4: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime48.MethodsPictureLarge'
override def run() {
             ^